--- a/docs/cs10-quick-syntax-ref/03.md
+++ b/docs/cs10-quick-syntax-ref/03.md
@@ -6,20 +6,7 @@
 
 根据您需要存储的数据，有几种不同的数据类型。C# 中的*简单类型*由四个有符号整数类型和四个无符号、三个浮点类型以及`char`和`bool`组成。
 
-<colgroup><col class="tcol1 align-left"> <col class="tcol2 align-left"> <col class="tcol3 align-left"></colgroup> 
-| 
-
-数据类型
-
- | 
-
-大小(位)
-
- | 
-
-描述
-
- |
+| 数据类型 | 大小(位) | 描述 |
 | --- | --- | --- |
 | `sbyte``short``int``long` | eightSixteenThirty-twoSixty-four | 有符号整数 |
 | `byte``ushort``uint``ulong` | eightSixteenThirty-twoSixty-four | 无符号整数 |
